Updated App, Navbar, Page2/Page3/4/5 components and added new assets

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>VFilms | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@400;500;600&family=Instrument+Sans:wght@400;500;600&family=Island+Moments&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@400;600&family=Instrument+Sans:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
+
   </head>
   <body class="bg-cover bg-center min-h-screen" style="background-image: url('./src/assets/background.png');">
     <div id="root"></div>
