--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VFilms | Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Varnan&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@400;500;600&family=Instrument+Sans:wght@400;500;600&family=Island+Moments&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@400;600&family=Instrument+Sans:wght@400;600&display=swap" rel="stylesheet">
